connected to mongo db create user
